--- a/TODO
+++ b/TODO
@@ -6,4 +6,5 @@ ich id.
 >Dodaj wykrywanie niezainicjalizowanych zmiennych
 >Przetestuj poprawność parsowania maina bez deklaracji zmiennych
 >Dodaj IO na parametrach procedur
->Przetestuj czy poprawnie działa operacja A := B, gdzie A i B to referencja
+>Przetestuj czy poprawnie działa operacja A := B, gdzie A i B to referencja [done]
+>Dodaj więcej testów dla repeat until
