Dodano implementację dzielenia i reszty z dzielenia

--- a/TODO
+++ b/TODO
@@ -5,6 +5,14 @@
 >Zrefaktoruj expression buildera, aby nie używał stringów.
 >Przenieś akcję z operatorem przypisania do funkcji.
 >Rozważ scalenie Block::addCommand i Block::addBlock do Block::addParsable
+>Część nagłówków definiuje więcej niż jedną klasę. Optymalnie byłoby je podzielić
+  i projekt podzielić na większą liczbę ścieżek. Zmiany będzie wtedy wymagał także
+  build system.
 ----Funkcjonalność---------
 >Dodaj wykrywanie niezainicjalizowanych zmiennych
 >Dodaj wykrywanie redeklaracji funkcji
+----Optymalizacje-----
+>Usuwanie martwego kodu (nieużywane zmienne, nieużywame funkcje, niepotrzebne operacje)
+>Refaktoryzacja kodu pętli (usunięcie niepotrzebnych skoków)
+>Refaktoryzacja kodu ifów (usunięcie niepotrzebnych skoków)
+>Refaktoryzuj kod dzielenia (zmienna a_/leftCopy jest niepotrzebna)
